--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ html {
   width: 350px;
   margin: 50px auto;
 }
+.card-container:hover {
+  transform: SCALE(1.05);
+}
 h1 {
   color: var(--color-grey-600);
   text-align: left;
@@ -52,6 +55,17 @@ h1 {
   text-align: center;
 }
 
+.details-container {
+  padding: 0 0 0 50px;
+
+  text-align: left;
+}
+
+.details {
+  color: var(--color-grey-900);
+  margin: 0px 0px 30px;
+}
+
 .button-container {
   text-align: center;
   margin: 30px 0 0 0;
@@ -69,5 +83,6 @@ h1 {
   font-weight: 600;
 }
 .button:hover {
-  background-color: aquamarine;
+  color: white;
+  background-color: var(--color-primary-300);
 }
